Closed Bug 1013536 Opened 11 years ago Closed 11 years ago

Firefox repainted the whole page continuously.

Categories

(Core :: Layout, defect)

32 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32
Tracking Status
firefox31 --- unaffected
firefox32 - affected

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

+++ This bug was initially created as a clone of Bug #1013224 +++ Firefox repainted the whole page continuously in Nightly32.0a1, but not Aurora31.0a2. Steps to reproduce: 1. nglayout.debug.paint_flashing = true 2. Open attached Actual results: Firefox repainted the whole page continuously. Expected results: No repainted whole page Regresson window(m-i) Good: https://hg.mozilla.org/integration/mozilla-inbound/rev/d002d113feca Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140507193441 Bad: https://hg.mozilla.org/integration/mozilla-inbound/rev/d1155f994a3a Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140507195741 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d002d113feca&tochange=d1155f994a3a Triggered by: d1155f994a3a Matt Woodrow — Bug 938395 - Enable single rect painting for d3d10. r=Bas
Attached file zipped reduced html
I don't see "whole page" repainting, in my Linux nightly. On both the original URL ( http://kurdologie.strictly-html.de/flickerbug/ ) and the attached zipped testcase, I see the brown splotches' bounding boxes being continously repainted. (Definitely still a bug; just clarifying what I see.) Looking at the edges of the brown splotches, I can see them "shimmering" in the testcase, and jittering a bit at the original URL. I think we might be layerizing and then de-layerizing, or oscillating between two ways of rounding, or something like that.
I do see whole-page flashing at the original URL when I scroll, though, FWIW. (And it looks like the brown-splotch flashing stuff from comment 2 is covered by bug 1013224, which reports "Constant flickering of the background image")
(In reply to Daniel Holbert [:dholbert] from comment #2) > I don't see "whole page" repainting, in my Linux nightly. > > On both the original URL ( http://kurdologie.strictly-html.de/flickerbug/ ) > and the attached zipped testcase, I see the brown splotches' bounding boxes > being continously repainted. > > (Definitely still a bug; just clarifying what I see.) > > Looking at the edges of the brown splotches, I can see them "shimmering" in > the testcase, and jittering a bit at the original URL. I think we might be > layerizing and then de-layerizing, or oscillating between two ways of > rounding, or something like that. It seems this happens only on windows 7. And you are seeing another bug such as Bug 1013224.
(In reply to Daniel Holbert [:dholbert] from comment #3) > I do see whole-page flashing at the original URL when I scroll, though, FWIW. > > (And it looks like the brown-splotch flashing stuff from comment 2 is > covered by bug 1013224, which reports "Constant flickering of the background > image") FYI, No need scrolling page on Windows7.
Graphics -------- Adapter Description: ATI Radeon HD 4300/4500 Series Adapter Drivers: aticfx64 aticfx64 aticfx32 aticfx32 atiumd64 atidxx64 atiumdag atidxx32 atiumdva atiumd6a atitmm64 Adapter RAM: 512 ClearType Parameters: Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 50 Device ID: 0x954f Direct2D Enabled: true DirectWrite Enabled: true (6.1.7601.18245) Driver Date: 4-29-2013 Driver Version: 8.970.100.1100 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 10 Vendor ID: 0x1002 WebGL Renderer: Google Inc. -- ANGLE (ATI Radeon HD 4300/4500 Series Direct3D9Ex vs_3_0 ps_3_0) windowLayerManagerRemote: false AzureCanvasBackend: direct2d AzureContentBackend: direct2d AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0
Looks like I broke paint flashing, not the actual amount we were painting. With single rect mode (only used on direct2d/win7+) we weren't clipped to the invalid region, so the paint flash colour was drawn over the entire layer.
Assignee: nobody → matt.woodrow
Attachment #8426018 - Flags: review?(bas)
Looks like the changing images are animated, which is what was generating the repaints in the first place.
Attachment #8426018 - Flags: review?(bas) → review+
(In reply to Matt Woodrow (:mattwoodrow) from comment #9) > Looks like the changing images are animated (Not technically -- but due to bug 1013224, they do continuously invalidate, so they might as well be animated. See bug 1013224 comment 9.)
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
QA Whiteboard: [good first verify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: