Bug 1013536 - Clip paint flashing area when using single-rect painting mode. r=Bas